# tank

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml
.github/workflows/: release.yml
.openclaw/: workspace-state.json
src/: audio.rs  config.rs  lib.rs  main.rs  matrix.rs  stt.rs  tts.rs  wake_word.rs  wizard.rs
