[package]
name = "matrixvoice"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "matrixvoice"
path = "src/main.rs"

[dependencies]
matrix-sdk = { version = "0.7", features = ["sqlite"] }
cpal = "0.15"
rustpotter = "3"
whisper-rs = "0.11"
rodio = "0.19"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1"
tempfile = "3"
